Remove uses of deprecated `new Integer(int)`